--- a/index.html
+++ b/index.html
@@ -1,101 +1,177 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<meta name="author" content="Guilherme Schröder	">
-		<title>Schröder's Personal Website </title>
 
-		<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-		<style>
-			* { padding: 0; margin: 0; font-family: 'Raleway', sans-serif; text-align: center; }
-			body { background-color: #007EA7; height: 100vh; width: 100%; position: relative; }
-			a { text-decoration: none; }
-			.bold { font-weight: bold; }
-			.underline { text-decoration: underline; }
-			#main { margin: 0 auto; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 50%; }
-			#title{ font-size: 50px; margin-bottom: 30px; color: #FFFFFF; }
-			#line_one, #line_two{ font-size: 30px; color: #FFFFFF}
-			#social { margin: 30px 0 0; }
-			#social li { list-style: none; margin: 10px; display: inline-block;}
-			#social li a { position: relative; width: 60px; height: 60px; line-height: 60px; display: block; text-align: center; box-shadow: 0 0 0 2px #FFFFFF; border-radius: 50%; font-size: 20px; transition: .5s; overflow: hidden;}
-			#social li a:before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; transition: .5s; background-color: #FFFFFF; z-index: -1; transform: rotate(-45deg) scaleX(0);}
-			#social li a:hover:before { transform: rotate(-45deg) scaleX(1); }
-			#social li a svg { color: #FFFFFF; padding: 8px; height: 44px;  width: 44px; }
-			#social li a svg:hover { color: #003459; }
-			.hidden { display: none !important; }
-			.typing::after { content: '|'; opacity: 1; margin-left: 5px; display: inline-block; animation: blink .7s infinite; }
-			@keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0; } }
-			@media only screen and (max-width: 768px) { #main { width: 80%; } }
-		</style>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	</head>
+    <title>Guilherme Schröder's Projects</title>
 
-	<body>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 
-		<div id="main">
-			<p id='title'></p>
-			<p id='line_one'></p>
-			<p id='line_two'></p>
-			<ul id='social'>
-				<li id='github' class="hidden" >
-					<a href="https://github.com/gvschroder" target="_blank">
-						<svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="github-alt" class="svg-inline--fa fa-github-alt fa-w-15" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512"><path fill="currentColor" d="M186.1 328.7c0 20.9-10.9 55.1-36.7 55.1s-36.7-34.2-36.7-55.1 10.9-55.1 36.7-55.1 36.7 34.2 36.7 55.1zM480 278.2c0 31.9-3.2 65.7-17.5 95-37.9 76.6-142.1 74.8-216.7 74.8-75.8 0-186.2 2.7-225.6-74.8-14.6-29-20.2-63.1-20.2-95 0-41.9 13.9-81.5 41.5-113.6-5.2-15.8-7.7-32.4-7.7-48.8 0-21.5 4.9-32.3 14.6-51.8 45.3 0 74.3 9 108.8 36 29-6.9 58.8-10 88.7-10 27 0 54.2 2.9 80.4 9.2 34-26.7 63-35.2 107.8-35.2 9.8 19.5 14.6 30.3 14.6 51.8 0 16.4-2.6 32.7-7.7 48.2 27.5 32.4 39 72.3 39 114.2zm-64.3 50.5c0-43.9-26.7-82.6-73.5-82.6-18.9 0-37 3.4-56 6-14.9 2.3-29.8 3.2-45.1 3.2-15.2 0-30.1-.9-45.1-3.2-18.7-2.6-37-6-56-6-46.8 0-73.5 38.7-73.5 82.6 0 87.8 80.4 101.3 150.4 101.3h48.2c70.3 0 150.6-13.4 150.6-101.3zm-82.6-55.1c-25.8 0-36.7 34.2-36.7 55.1s10.9 55.1 36.7 55.1 36.7-34.2 36.7-55.1-10.9-55.1-36.7-55.1z"></path></svg>
-					</a>
-				</li>
-				<li id='linkedin' class="hidden">
-					<a href="https://www.linkedin.com/in/guilherme-schroder/" target="_blank">
-						<svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" class="svg-inline--fa fa-linkedin-in fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path></svg>
-					</a>
-				</li>
-			</ul>
-		</div>
-		<script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
 
-			function fadeIn(el, display){
-				el.style.opacity = 0;
-				el.style.display = display || "inline-block";
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/style.css">
 
-				(function fade() {
-					let val = parseFloat(el.style.opacity);
-					if (!((val += .1) > 1)) {
-						el.style.opacity = val;
-						requestAnimationFrame(fade);
-					}
-				})();
-			}
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- Leave those next 4 lines if you care about users using IE8 -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
-			let data = [
-			['typing', document.getElementById('title'), "Hello, I'm Guilherme Schröder!"], 
-			['typing', document.getElementById('line_one'), "I'm a Software Developer at MadeiraMadeira."], 
-			['typing', document.getElementById('line_two'), 'I develop software using Python, ADVPL, PHP, and Java.'],
-			['fadeIn', document.getElementById('github')],
-			['fadeIn', document.getElementById('linkedin')]
-			];
+	<!-- Google Analytics -->
+    <script>
+        if (location.hostname != "localhost") {
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+					m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-			(async function loop() {
-				for(let i = 0; i < data.length; i++){
-					let type = data[i][0];
-					let el = data[i][1];
-					if(type == 'typing') {
-						el.classList.add("typing");
-						let content = data[i][2];
-						for(let x = 0; x < content.length; x++){
-							await new Promise(resolve => setTimeout(resolve, 75));
-							el.innerHTML += content[x];
-						}
-						el.classList.remove("typing");
-					} else if(type == 'fadeIn') {
-						await new Promise(resolve => setTimeout(resolve, 400));
-						fadeIn(el);
-						el.classList.remove("hidden");
-					}
-					await new Promise(resolve => setTimeout(resolve, 300));
-				}
-			})();
+			ga('create', 'UA-XXXXX-Y', 'auto');
+			ga('send', 'pageview');
+        } else {
+            console.log('dev mode detected, don\'t track view')
+        }
+    </script>
+	<!-- End Google Analytics -->
 
-		</script>
-	</body>
+</head>
+<body>
 
+<div class="container-fluid">
+
+    <div class="text-center">
+        <img src="img/profiler-round.jpg" width=200 class="profile-pic">
+        <h1>Guilherme Schröder</h1>
+        <h3>Software Developer / Data Engineer</h3>
+        <h4>Desenvolvo projetos utilizando ADVPL, Python, Java e PHP.</h4>
+
+        <div class="text-center" style="margin:20px">
+            <ul id='social'>
+                <li id='github'>
+                    <a href="https://github.com/gvschroder" target="_blank" title="GitHub">
+                        <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="github-alt" class="svg-inline--fa fa-github-alt fa-w-15" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512"><path fill="currentColor" d="M186.1 328.7c0 20.9-10.9 55.1-36.7 55.1s-36.7-34.2-36.7-55.1 10.9-55.1 36.7-55.1 36.7 34.2 36.7 55.1zM480 278.2c0 31.9-3.2 65.7-17.5 95-37.9 76.6-142.1 74.8-216.7 74.8-75.8 0-186.2 2.7-225.6-74.8-14.6-29-20.2-63.1-20.2-95 0-41.9 13.9-81.5 41.5-113.6-5.2-15.8-7.7-32.4-7.7-48.8 0-21.5 4.9-32.3 14.6-51.8 45.3 0 74.3 9 108.8 36 29-6.9 58.8-10 88.7-10 27 0 54.2 2.9 80.4 9.2 34-26.7 63-35.2 107.8-35.2 9.8 19.5 14.6 30.3 14.6 51.8 0 16.4-2.6 32.7-7.7 48.2 27.5 32.4 39 72.3 39 114.2zm-64.3 50.5c0-43.9-26.7-82.6-73.5-82.6-18.9 0-37 3.4-56 6-14.9 2.3-29.8 3.2-45.1 3.2-15.2 0-30.1-.9-45.1-3.2-18.7-2.6-37-6-56-6-46.8 0-73.5 38.7-73.5 82.6 0 87.8 80.4 101.3 150.4 101.3h48.2c70.3 0 150.6-13.4 150.6-101.3zm-82.6-55.1c-25.8 0-36.7 34.2-36.7 55.1s10.9 55.1 36.7 55.1 36.7-34.2 36.7-55.1-10.9-55.1-36.7-55.1z"></path></svg>
+                    </a>
+                </li>
+                <li id='linkedin'>
+                    <a href="https://www.linkedin.com/in/guilherme-schroder/" target="_blank" title="Linkedin">
+                        <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" class="svg-inline--fa fa-linkedin-in fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path></svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row row-grey">
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="row work-item-row">
+                <div class="col-lg-5 col-lg-push-7">
+                    <img src="img/portfolio-aws.png" class="img-responsive center-block">
+                </div>
+                <div class="col-lg-6 col-lg-pull-5">
+                    <h2>Amazon Web Services</h2>
+                    <p>Desenvolvimento de aplicações utilizando a plataforma de nuvem AWS, criando aplicações buscando
+                        alta disponibilidade e escalabilidade utilizando os serviços:</p>
+                    <ul>
+                        <li>RDS</li>
+                        <li>EC2</li>
+                        <li>Code Pipeline</li>
+                        <li>Lambda</li>
+                        <li>Kinesis</li>
+                        <li>SQS</li>
+                        <li>CloudWatch</li>
+                        <li>SNS</li>
+                        <li>Elasticsearch (ELK Stack)</li>
+                        <li>S3</li>
+                        <li>IAM</li>
+                    </ul>
+                    <h4></h4>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row row-white">
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="row work-item-row">
+                <div class="col-lg-5 col-lg-push-7">
+                    <img src="img/portfolio-software.png" class="img-responsive center-block">
+                </div>
+                <div class="col-lg-6 col-lg-pull-5">
+                    <h2>Desenvolvimento de Software</h2>
+                    <p>Desenvovimento de aplicações, microsserviços, API's, etc. Utilizando:</p>
+                    <ul>
+                        <li>Python</li>
+                        <li>Java</li>
+                        <li>PHP</li>
+                        <li>Docker</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row row-grey">
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="row work-item-row">
+                <div class="col-lg-7">
+                    <img src="img/portfolio-data.png" class="img-responsive center-block">
+                </div>
+                <div class="col-lg-4 col-lg-offset-1">
+                    <h2>Data Engineering</h2>
+                    <p>Construção de pipelines de para Extração, Tratamento, Catálogo, Transformação e Disponibilização de Dados.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row row-white">
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="row work-item-row">
+                <div class="col-lg-5">
+                    <img src="img/portfolio-protheus.png" class="img-responsive center-block">
+                </div>
+                <div class="col-lg-6 col-lg-offset-1">
+                    <h2>ERP Protheus</h2>
+                    <p>Desenvolvimento customizações para o ERP Protheus‎ TOTVS utilizando ADVPL e outras linguagens:</p>
+                    <h4>Integrações entre Sistemas</h4>
+                    <p>Integração do Protheus com outros sistemas como: SAP, Salesforce, Senior e Sistemas Legado.</p>
+                    <h4>Amazon Web Services</h4>
+                    <p>Integração do Protheus com diversos serviços da plataforma AWS entre eles: Lambda, SQS, SNS,
+                        Elasticsearch (ELK Stack), S3 e Kinesis.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row row-grey">
+        <div class="col-sm-12 text-center">
+            <h3>Minha toolbox</h3>
+            <img src="img/tool-logos/docker.png" class="techlogo" width="120">
+            <img src="img/tool-logos/git.png" class="techlogo" width="120">
+            <img src="img/tool-logos/jetbrains.png" class="techlogo" width="120">
+        </div>
+    </div>
+
+    <div class="row row-footer text-center">
+        <div class="col">
+            <div style="margin:50px;">
+                <h3 style="margin:50px 0 15px">Contato para projetos:</h3>
+                <a href="mailto:gvschroder@gmail.com" >gvschroder@gmail.com</a>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
+<script src="js/jquery-3.1.0.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<!-- <script src="js/myScripts.js"></script> -->
+
+</body>
 </html>
+
